cm4all-workshop (2.0.27) unstable; urgency=low

  * cron: fix hour check in scheduler
  * cron: fix time zone confusion; everything is UTC for now

 --   

cm4all-workshop (2.0.26) unstable; urgency=low

  * fix crash when database is unavailable during startup
  * cron: fix integer underflow in "@once" job delay
  * logger: fix off-by-one bug in log level check
  * systemd: start Workshop after PostgreSQL

 -- Max Kellermann <mk@cm4all.com>  Mon, 11 Sep 2017 18:04:21 -0000

cm4all-workshop (2.0.25) unstable; urgency=low

  * spawn: use the "systemd" controller
  * cron: apply random delay to all cron jobs
  * systemd: override the locale, fixes "_S_create_c_locale" error
  * systemd: enable crash dumps

 -- Max Kellermann <mk@cm4all.com>  Wed, 23 Aug 2017 10:36:35 -0000

cm4all-workshop (2.0.24) unstable; urgency=low

  * spawn: fix bogus pivot_root() error message
  * workshop: write failure to jobs table after timeout
  * translation: add packet MOUNT_ROOT_TMPFS

 -- Max Kellermann <mk@cm4all.com>  Tue, 15 Aug 2017 10:07:22 -0000

cm4all-workshop (2.0.23) unstable; urgency=low

  * spawn: attach to existing network namespace with NETWORK_NAMESPACE_NAME
  * spawn: allow unshare(), mount(), umount(), pivot_root()
  * migrate: new database migration tool
  * workshop: add column "enabled"
  * cron: support month and weekday names

 -- Max Kellermann <mk@cm4all.com>  Fri, 04 Aug 2017 17:04:17 -0000

cm4all-workshop (2.0.22) unstable; urgency=low

  * spawn: run the PID namespace init process as root
  * spawn: tight system call whitelist for init process
  * spawn: forbid fanotify_*, nfsservctl, syslog
  * translation: fix the FORBID_MULTICAST setting
  * translation: add packet FORBID_BIND

 -- Max Kellermann <mk@cm4all.com>  Tue, 01 Aug 2017 10:43:29 -0000

cm4all-workshop (2.0.21) unstable; urgency=low

  * cron: change to home directory

 -- Max Kellermann <mk@cm4all.com>  Mon, 31 Jul 2017 08:34:38 -0000

cm4all-workshop (2.0.20) unstable; urgency=low
