@@ -2,6 +2,7 @@ cm4all-workshop (2.0.27) unstable; urgency=low
 
   * cron: fix hour check in scheduler
   * cron: fix time zone confusion; everything is UTC for now
+  * cron: set next_run to 'infinity' for expired "@once" jobs
 
  --   
 
